# react-prac-002-django-prac-005

./: Dockerfile  README.md
backend/: .dockerignore  .gitignore  Dockerfile  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/accounts/: models.py  serializers.py  urls.py  views.py
backend/backend/: settings.py  urls.py  wsgi.py
backend/backend/settings/: 01_development.py  04_product.py
backend/instagram/: admin.py  models.py  serializers.py  urls.py  views.py
frontend/: .gitignore  .prettierrc  package.json
frontend/src/: App.js  Constants.js  Post.js  PostList.js  api.js  index.js  myStore.js  store.js
frontend/src/components/: AppFooter.js  AppHeader.js  AppHeader.scss  AppLayout.js  AppLayout.scss  Comment.js  Post.js  PostList.js  PostNewForm.js  StoryList.js  Suggestion.js  Suggestion.scss  SuggestionList.js  commentList.js
frontend/src/pages/: Home.js  Index.js  PostNew.js  PostNew.scss
frontend/src/pages/accounts/: Index.js  Login.js  Signup.js
frontend/src/utils/: LoginRequiredRoute.js  forms.js  useLocalStorage.js
